--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "com.air.stylecop",
   "displayName": "StyleCop Analyzer",
-  "version": "2020.0.1",
+  "version": "1.0.1",
   "unity": "2019.2",
   "keywords": [],
   "description": "Enforce opinionated AIR coding style standards across projects.",
   "references": [],
   "optionalUnityReferences": [],
-  "includePlatforms": ["Editor"],
+  "includePlatforms": [
+    "Editor"
+  ],
   "excludePlatforms": [],
   "allowUnsafeCode": false,
   "overrideReferences": false,
   "precompiledReferences": [],
   "autoReferenced": true,
-  "defineConstraints": []
+  "defineConstraints": [],
+  "type": "tool"
 }
