--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.air.stylecop",
   "displayName": "StyleCop Analyzer",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "unity": "2019.2",
   "keywords": [],
   "description": "Enforce opinionated AIR coding style standards across projects.",
@@ -16,5 +16,6 @@
   "precompiledReferences": [],
   "autoReferenced": true,
   "defineConstraints": [],
-  "type": "tool"
+  "type": "tool",
+  "hideInEditor": true
 }
